--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,14 +28,14 @@ repos:
 #       --remove-unused-variables,
 #     ]
 
-- repo: https://github.com/asottile/seed-isort-config
-  rev: v2.2.0
-  hooks:
-  - id: seed-isort-config
-- repo: https://github.com/pycqa/isort
-  rev: 5.10.1
-  hooks:
-  - id: isort
+# - repo: https://github.com/asottile/seed-isort-config
+#   rev: v2.2.0
+#   hooks:
+#   - id: seed-isort-config
+# - repo: https://github.com/pycqa/isort
+#   rev: 5.10.1
+#   hooks:
+#   - id: isort
 
 - repo: https://github.com/ambv/black
   rev: 22.3.0
